2005-11-28  Per Bothner  <per@bothner.com>

	* kawa/lang/CompileFile.java (compile_to_files): Set top-level
	class name only if passed in.
	
2005-11-27  Per Bothner  <per@bothner.com>

	* kawa/standard/load.java (loadCompiled): Used WrappedException.

2005-11-23  Per Bothner  <per@bothner.com>

	* kawa/standard/module_name (scanForm): Do the SyntaxForm handling
	in case this is called in a macro.
	Allocate Compilation's mainClass if not set yet.
	Create a private Declaration if the name is a symbol.

	* kawa/standard/prim_method.java (constructor): Remove static field.
	(rewrite): Remove no-longer-used support for invokespecial.
	* kawa/standard/Scheme.java: New generate-temporaries procedure.
	primitive-constructor was moved to kawa.lib.reflection.

	* kawa/standard/constant_fold.java (checkConstant): Allow for
	Declaration with UNKNOWN flag or constant value.

2005-11-21  Per Bothner  <per@bothner.com>

	* kawa/lang/Lambda.java (rewriteForm): New method, so we can set
	the line/column number to the actual lambda expression.

2005-11-20  Per Bothner  <per@bothner.com>

	* Make-rules (java-classes.stamp, scm-classes.stamp,
	clisp-classes.stamp, elisp-classes.stamp):
	Also touch kawa-jar.stamp in top-dir.
	* Makefile.am: Remove JAP_DEPS_XXX macros.
	(kawa-@VERSION@.jar): Depend on kawa-jar.stamp instead of JAR_DEPS.
	(MOSTLYCLEANFILES): Remome *.stamp - specifically kawa-jar.stamp.

	* Makefile.am (SUBDIRS): Enter jemacs/swing/swt dirs unconditionally.
	(JEMACS_SUBDIRS, JEMACS_SWING, JEMACS_SWT, SWINGVIEWS_SUBDIRS):
	Remove no-longer-needed macros.
	* configure.in: New --enable-jemacs option - default off,
	to avoid accidental includion of GPL'd code.
	New --enable-echo2, currently unused.
	Change --with[out]-swing to default to 'with'.
	Add ENABLE_JEMACS and ENABLE_ECHO2 automake conditionals.
	Remove SWING_SELECTED, AWT_SELECTED, XML_SELECTED, extra_java variables.
	* kawa/Makefile.am: Use WITH_AWT conditional.

2005-11-18  Per Bothner  <per@bothner.com>
